# Hubstudio_sign_outlook

./: .cursorrules  .env  .env.example  .gitignore  00-save.md  debug_log.md  design.md  design.original.md  document_map.md  pyproject.toml  requirements.md  requirements.txt  tasks.md  test.md
.obsidian/: workspace.json
docs/: codemap.md  contracts.md  glossary.md
prompts/: README.md  automation_dev_template.md  debug_analyze.md  design_feature.md  doc_sync.md  edit_file.md  feature_dev_template.md  playwright_selectors.md  requirements_refine.md  task_implement.md  test_cases.md
scripts/: ms_step01_connect_probe.py  ms_step02_click_accessibility.py  ms_step03_wait.py  ms_step04_press_hold.py  test_env_create_api.py
src/: __init__.py  apply_signup_profile.py  archive_store.py  config.py  connect_browser.py  create_hubstudio_environment.py  main.py  ms_hold_challenge.py  open_signup_page.py  outlook_user_profile.py  phase2_attach.py  pipeline.py  sequence_state.py  start_hubstudio_browser.py  step_result.py  validate_hubstudio_env_config.py  verify_page.py
tests/: conftest.py  test_apply_behavior.py  test_archive_container.py  test_config.py  test_ms_hold_challenge.py  test_outlook_user_profile.py  test_step_result.py
tools/hubstudio_cdp_probe/: README copy.md  README.md  run_probe.py
